worked on controller interface

--- a/RPG/RPG/RPG.vcxproj
+++ b/RPG/RPG/RPG.vcxproj
@@ -153,17 +153,20 @@
     <ClCompile Include="Attack.cpp" />
     <ClCompile Include="AttackingState.cpp" />
     <ClCompile Include="BasicMeleeAttack.cpp" />
+    <ClCompile Include="ControllerInterface.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="BaseGameEngine.cpp" />
     <ClCompile Include="GameMenu.cpp" />
     <ClCompile Include="GameScene.cpp" />
     <ClCompile Include="IdleState.cpp" />
+    <ClCompile Include="InputMessage.cpp" />
     <ClCompile Include="MapTile.cpp" />
     <ClCompile Include="MenuButton.cpp" />
     <ClCompile Include="MovingState.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Rat.cpp" />
     <ClCompile Include="RpgOverWorldScene.cpp" />
+    <ClCompile Include="RpgOverWorldSceneKeysMouseController.cpp" />
     <ClCompile Include="RpgWorldBuilderScene.cpp" />
     <ClCompile Include="RpgWorldBuilderSceneMenus.cpp" />
     <ClCompile Include="SaveAttribute.cpp" />
@@ -186,9 +189,11 @@
     <ClInclude Include="AttackingState.h" />
     <ClInclude Include="BaseGameEngine.h" />
     <ClInclude Include="BasicMeleeAttack.h" />
+    <ClInclude Include="ControllerInterface.h" />
     <ClInclude Include="GameMenu.h" />
     <ClInclude Include="GameScene.h" />
     <ClInclude Include="IdleState.h" />
+    <ClInclude Include="InputMessage.h" />
     <ClInclude Include="MapTile.h" />
     <ClInclude Include="MenuButton.h" />
     <ClInclude Include="MovingState.h" />
@@ -196,6 +201,7 @@
     <ClInclude Include="Rat.h" />
     <ClInclude Include="RpgGameConstants.h" />
     <ClInclude Include="RpgOverWorldScene.h" />
+    <ClInclude Include="RpgOverWorldSceneKeysMouseController.h" />
     <ClInclude Include="RpgWorldBuilderScene.h" />
     <ClInclude Include="SaveAttribute.h" />
     <ClInclude Include="SaveObject.h" />
