--- a/RPG/RPG/RPG.vcxproj.filters
+++ b/RPG/RPG/RPG.vcxproj.filters
@@ -181,6 +181,12 @@
       <Filter>Source Files\RpgGame\scenes\overWorldScene</Filter>
     </ClCompile>
     <ClCompile Include="CombatText.cpp">
+      <Filter>Source Files\RpgGame</Filter>
+    </ClCompile>
+    <ClCompile Include="MenuText.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="UiPanel.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -279,6 +285,12 @@
       <Filter>Header Files\RpgGame\scenes\overWorldScene</Filter>
     </ClInclude>
     <ClInclude Include="CombatText.h">
+      <Filter>Header Files\RpgGame</Filter>
+    </ClInclude>
+    <ClInclude Include="MenuText.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="UiPanel.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
